--- a/src/assets/sass/components/home/_c--home-a.scss
+++ b/src/assets/sass/components/home/_c--home-a.scss
@@ -17,7 +17,7 @@
     width: 100%;
 
     @media all and ($viewport-type: $tablets) {
-      grid-template-columns: 1fr;
+      grid-template-columns: minmax(0, 1fr);
       gap: 2rem;
       text-align: center;
       justify-items: center;
